--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Snake JS v1.0</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script type="module" src="game.js" defer ></script>
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <script type="module" src="./js/game.js" defer ></script>
 </head>
 <body>  
   <div id="game-board"></div>
